k8s/gateway/core-routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: core-routes
  namespace: banquito-core
spec:
  parentRefs:
    - name: banquito-public-gateway
      namespace: banquito-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/v2/auth/login/staff
        - path:
            type: PathPrefix
            value: /api/v2/accounts
        - path:
            type: PathPrefix
            value: /api/v2/calendar
        - path:
            type: PathPrefix
            value: /api/v2/eod
        - path:
            type: PathPrefix
            value: /api/v2/payments/batch-credit
        - path:
            type: PathPrefix
            value: /api/v2/payments/corporate-debit
        - path:
            type: PathPrefix
            value: /api/v2/payments/corporate-refund
        - path:
            type: PathPrefix
            value: /api/v2/payments/offus-settlement
      backendRefs:
        - name: account-core-service
          port: 8081
    - matches:
        - path:
            type: PathPrefix
            value: /api/v2/accounting
      backendRefs:
        - name: accounting-service
          port: 8082
    - matches:
        - path:
            type: PathPrefix
            value: /api/v2/auth/login
        - path:
            type: PathPrefix
            value: /api/v2/auth/change-password
        - path:
            type: PathPrefix
            value: /api/v2/customers
        - path:
            type: PathPrefix
            value: /api/v2/customer-subtypes
        - path:
            type: PathPrefix
            value: /api/v2/core-parameters
        - path:
            type: PathPrefix
            value: /api/v2/branches
        - path:
            type: PathPrefix
            value: /api/v2/holidays
      backendRefs:
        - name: party-service
          port: 8083
