k8s/gateway/frontend-routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-routes
  namespace: banquito-frontend
spec:
  parentRefs:
    - name: banquito-public-gateway
      namespace: banquito-gateway
  hostnames:
    - personas.8.233.141.65.nip.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: web-personas-frontend
          port: 8080
