k8s/gateway/switch-routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: switch-routes
  namespace: banquito-switch
spec:
  parentRefs:
    - name: banquito-public-gateway
      namespace: banquito-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/v2/payments/batches
        - path:
            type: PathPrefix
            value: /api/v2/payments/routing-codes
      backendRefs:
        - name: file-reception-service
          port: 8084
    - matches:
        - path:
            type: PathPrefix
            value: /api/v2/tariff
      backendRefs:
        - name: tariff-service
          port: 8086
    - matches:
        - path:
            type: PathPrefix
            value: /api/v2/clearing
      backendRefs:
        - name: clearinghouse-service
          port: 8087
    - matches:
        - path:
            type: PathPrefix
            value: /api/v2/payments/receipts
        - path:
            type: PathPrefix
            value: /api/v2/reports
      backendRefs:
        - name: report-service
          port: 8088
    - matches:
        - path:
            type: PathPrefix
            value: /api/v2/notifications
      backendRefs:
        - name: notification-service
          port: 8089
